<resources>
    <string name="app_name">DHB OPD</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="star"> *</string>
    <string name="crop">Crop</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_hindi">मोबाइल</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="alert_enter_Mobile">Please enter Your Mobile Number.</string>
    <string name="alert_enter_password">Please enter Your Password.</string>
    <string name="alert_password_length_should_be_5_digit">Password should be of 5 letter.</string>
    <string name="delete_sample_confirmation_msg">Are you sure you want to delete?</string>
    <string name="patient_queue">Patient Queue</string>
    <string name="referred_to_me">Referred to me</string>
    <string name="on_hold_patient_queue">Hold Visit Queue</string>
    <string name="change_password">Change Password</string>
    <string name="sync_data">Sync Data</string>
    <string name="suggestion">Suggestion</string>
    <string name="doctor_timing">Doctors Timing</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Sign Out</string>
    <string name="present">Present</string>
    <string name="present_hindi">रोगी कतार</string>
    <string name="examined">Examined</string>
    <string name="examined_hindi">जाँच किये गए</string>
    <string name="no_show">No Show</string>
    <string name="no_show_hindi">उपलब्ध नहीं</string>
    <string name="undo">Undo</string>
    <string name="undo_hindi">पूर्ववत करें</string>
    <string name="send_to_doctor">Send To Doctor</string>
    <string name="send_to_doctor_hindi">डॉक्टर के पास भेजे</string>
    <string name="non_register">Non Registered</string>
    <string name="alert_register_send_to_doctor">Please register a patient in order to proceed. </string>
    <string name="male">Male</string>
    <string name="male_hindi">Male\nपुरुष</string>
    <string name="female">Female</string>
    <string name="female_hindi">Female\nमहिला</string>
    <string name="no_record">No patient in visits.</string>
    <string name="no_record_in_queue">No patient in queue.</string>
    <string name="no_records">No record.</string>
    <string name="no_search_record">No Search result found</string>
    <string name="zero">0</string>
    <string name="patient_visit_hindi">रोगी की भेट</string>
    <string name="patient_visit">View/Add Patient Visits</string>
    <string name="collect_samples">Collect Samples</string>
    <string name="pathology">Pathology</string>
    <string name="doctor">DOCTOR</string>
    <string name="already_in_queue">Patient already present in queue.</string>
    <string name="search_patient">Search Patient</string>
    <string name="search_state">Search State</string>
    <string name="search_district">Search District</string>
    <string name="search_by_name_mobile_patientId">Search Patient by Name/ Mobile/ Patient Id/ HIN</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="alert_enter_old_password">Please enter your Old Password.</string>
    <string name="alert_enter_new_password">Please enter your New Password.</string>
    <string name="alert_enter_confirm_password">Please Confirm your Password.</string>
    <string name="alert_password_not_match">Entered New and Confirm Password do not match.</string>
    <string name="alert_new_password_length_should_be_5_letter">New Password should be of 5 letter.</string>
    <string name="alert_must_contain_atleast_1_Special_1_digit">Password should be combination of Numbers and Special Characters only.</string>
    <string name="alert_enter_first_name">Please enter First Name.</string>
    <string name="alert_invalid_first_name">Please enter valid First Name.</string>
    <string name="alert_profile_image">Please upload Profile photo.</string>
    <string name="alert_enter_year">Please enter valid Years.</string>
    <string name="alert_enter_months">Please enter valid Months.</string>
    <string name="alert_enter_days">Please enter valid Days.</string>
    <string name="alert_enter_suggestion">Please add your Suggestion.</string>
    <string name="alert_enter_last_name">Please enter Last Name.</string>
    <string name="alert_invalid_last_name">Please enter valid Last Name.</string>
    <string name="alert_enter_state">Please enter State.</string>
    <string name="alert_enter_district">Please enter District.</string>
    <string name="alert_enter_taluka">Please enter Taluka/Tahasil.</string>
    <string name="alert_enter_area">Please enter Place.</string>
    <string name="alert_enter_doctor_name">Please enter Doctor Name.</string>
    <string name="alert_enter_address">Please enter Address.</string>
    <string name="alert_enter_pin_code">Please enter Pin code.</string>
    <string name="alert_enter_mobile_name">Please enter Mobile Number.</string>
    <string name="alert_enter_dob_name">Please enter Date of Birth or Age.</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="alert_enter_mobile">Please enter your Mobile Number. </string>
    <string name="alert_invalid_mobile">Please enter Valid Mobile Number.</string>
    <string name="patient_consent_form">Registration Form</string>
    <string name="alert_you_want_to_logOut">Are you sure you want to Sign out?</string>
    <string name="alert_you_want_to_signOut">Data synced successfully. Do you want to Sign Out?</string>
    <string name="surgical_history">Surgical History</string>
    <string name="patient_history">Patient History</string>
    <string name="family_history">Family History</string>
    <string name="medical_surgical_history">Medical/Surgical History</string>
    <string name="new_disease">+ New Disease</string>
    <string name="disease">Disease</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="patient_habits">Patient Habits</string>
    <string name="name_of_surgery">Name of Surgery</string>
    <string name="description">Description</string>
    <string name="date_of_surgery">Date of Surgery</string>
    <string name="add_to_list">Add to List</string>
    <string name="date_added">Date Added</string>
    <string name="surgery">Surgery</string>
    <string name="patient_observation">Patient Observation</string>
    <string name="observation">Observation</string>
    <string name="progress_message_authenticating_please_wait">Loading please wait...</string>
    <string name="image_name">Image Name</string>
    <string name="add_image">Add Image</string>
    <string name="scan_suggestion">Scan Suggestion</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="add_lab_report">Add Lab Report</string>
    <string name="lab_report_name">Lab Report Name</string>
    <string name="prescription_name">Prescription Name</string>
    <string name="most_frequent">Most Frequent</string>
    <string name="all">All</string>
    <string name="diagnosis">Diagnosis</string>
    <string-array name="icd_code_description">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>

    </string-array>
    <string name="icd_code">ICD Code</string>
    <string name="infectious_disease">Infectious Disease</string>
    <string name="chronic_disease">Chronic Disease</string>
    <string name="comments">Comments</string>
    <string name="physical_parameters">Physical Parameters</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="success_blood_sugar_hba1c">Blood Sugar - HbA1c saved successfully.</string>
    <string name="height_weight">Height &amp; Weight</string>
    <string name="bmi">BMI</string>
    <string name="temp">Temp</string>
    <string name="pulse">Pulse</string>
    <string name="stolicLying">Stolic</string>
    <string name="diastolicLying">Diastolic</string>
    <string name="pp">PP</string>
    <string name="random_sugar">Random Sugar</string>
    <string name="fasting">Fasting</string>
    <string name="hdl1">HDL</string>
    <string name="ldl1">LDL</string>
    <string name="triglyceride">Triglycerides</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="kgs">Kgs</string>
    <string name="cms">cms</string>
    <string name="kgpermsq">Kg/m</string>
    <string name="farenhiet">℉</string>
    <string name="celsius">℃</string>
    <string name="bpm">bpm</string>
    <string name="mmhg">mmHg</string>
    <string name="mgdl">mg/dL</string>
    <string name="immunization_schedule">Indradhanushya</string>
    <string name="patient_immunization">Patient Immunization</string>
    <string name="vaccine">Vaccine</string>
    <string name="date">Date</string>
    <string name="batchno">Batch No.</string>
    <string name="dose">Dose</string>
    <string name="expirydate">Expiry Date</string>
    <string name="addtolist">Add to List</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="suggestion_text">Let us know how we can improve your experience with DHB</string>
<string name="alert_message_confirm_exit">Are you sure you want to exit the application?
    </string>
    <string name="document_name">Document Name</string>
    <string name="document_date">Document Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="not_available">NA</string>
    <string name="loading_image">Loading Image...</string>
    <string name="patient_id">Patient Id</string>
    <string name="hosp_ref_id">HIN</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hindi">पहला नाम</string>
    <string name="change_photo">Change\n Photo</string>
    <string name="middle_name">Middle Name</string>
    <string name="middle_name_hindi">मध्य नाम</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hindi">अंतिम नाम</string>
    <string name="optional">Optional</string>
    <string name="optional_hindi">ऐच्छिक</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_hindi">जन्मतिथि</string>
    <string name="dd_mmm_yy">DD-MMM-YY</string>
    <string name="or">OR</string>
    <string name="or_hindi">/या</string>
    <string name="age">Age</string>
    <string name="age_hindi">आयु</string>
    <string name="yy">YY</string>
    <string name="y">Y</string>
    <string name="mm">MM</string>
    <string name="m">M</string>
    <string name="dd">DD</string>
    <string name="d">D</string>
    <string name="gender">Gender\n लिंग</string>
    <string name="gender_1">Gender</string>
    <string name="gender_hindi">लिंग</string>
    <string name="other">Other</string>
    <string name="other_hindi">Other\nअन्य</string>
    <string name="plan_type">Plan Type</string>
    <string name="plan_type_hindi">योजना के प्रकार</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="state">State</string>
    <string name="state_hindi">राज्य</string>
    <string name="district">District</string>
    <string name="select_district">Select District</string>
    <string name="district_hindi">जिला</string>
    <string name="taluka">Taluka</string>
    <string name="taluka_tahasil">Taluka/Tahasil</string>
</resources>