<?xml version="1.0" encoding="utf-8"?><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sign_in_bg"
    android:orientation="vertical">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlt_layout_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/layout_title_bar"
        layout="@layout/title_bar_heath_book"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"></include>


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout_title_bar"
        android:background="@drawable/sign_in_bg" />

    <ImageView
        android:id="@+id/img_sign_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_180"
        android:background="@drawable/sign_in_logo"
        android:visibility="invisible" />

    <View
        android:id="@+id/vw_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/vw_bottomMargin"
        android:layout_alignTop="@+id/txt_mobile"
        android:background="@color/login_white_bg"
        android:paddingBottom="@dimen/dp_10" />

    <TextView
        android:id="@+id/txt_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_sign_logo"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_80"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/mobile"
        android:textColor="@color/text_color"
        android:textSize="@dimen/dp_25" />

    <TextView
        android:id="@+id/txt_start1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_mobile"
        android:layout_alignTop="@+id/txt_mobile"
        android:layout_below="@+id/img_sign_logo"
        android:layout_toRightOf="@+id/txt_mobile"
        android:gravity="top"
        android:text="@string/star"
        android:textColor="@color/red_color"
        android:textSize="@dimen/dp_25" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_mobile"
        android:layout_below="@+id/txt_mobile"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/sign_in_text_box"
        android:inputType="number"
        android:maxLength="10"
        android:paddingLeft="@dimen/dp_5"
        android:textColor="@color/text_color"
        android:textSize="@dimen/dp_25" />


    <View
        android:id="@+id/vw_bottomMargin"
        android:layout_width="@dimen/dp_10"
        android:layout_height="@dimen/dp_25"
        android:layout_below="@+id/et_mobile" />

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@+id/vw_bg"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_150"
        android:background="@drawable/selector_sign_in_button"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/txt_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/white_text"
        android:textSize="@dimen/dp_25" />

    <TextView
        android:id="@+id/txt_page_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white_text"
        android:textSize="@dimen/dp_16" />


</RelativeLayout><!--</ScrollView>-->