<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"

    >

    <include
        android:id="@+id/layout_title_bar"
        layout="@layout/title_bar_heath_book"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"></include>

    <ImageView
        android:id="@+id/img_back_ground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout_title_bar"
        android:background="@drawable/sign_in_bg"
        android:visibility="visible" />


    <ImageView
        android:id="@+id/img_sign_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_signin_logo"
        android:background="@drawable/sign_in_logo"
        android:visibility="visible" />

    <View
        android:id="@+id/vw_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/vw_bottomMargin"
        android:layout_alignTop="@+id/txt_mobile"
        android:background="@color/login_white_bg"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10" />

    <TextView
        android:id="@+id/txt_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_sign_logo"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_80"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/mobile"
        android:textColor="@color/text_color"
        android:textSize="@dimen/dp_25" />

    <TextView
        android:id="@+id/txt_start1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_mobile"
        android:layout_alignTop="@+id/txt_mobile"
        android:layout_below="@+id/img_sign_logo"
        android:layout_toRightOf="@+id/txt_mobile"
        android:gravity="top"
        android:text="@string/star"
        android:textColor="@color/red_color"
        android:textSize="@dimen/dp_25" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_mobile"
        android:layout_below="@+id/txt_mobile"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/sign_in_text_box"
        android:inputType="number"
        android:maxLength="10"
        android:paddingLeft="@dimen/dp_5"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="@dimen/dp_25" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mobile"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_25"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/dp_25" />

    <TextView
        android:id="@+id/txt_start2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_password"
        android:layout_alignTop="@+id/txt_password"
        android:layout_below="@+id/et_mobile"
        android:layout_toRightOf="@+id/txt_password"
        android:gravity="top"
        android:text="@string/star"
        android:textColor="@color/red_color"
        android:textSize="@dimen/dp_25" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_mobile"
        android:layout_alignRight="@+id/et_mobile"
        android:layout_below="@+id/txt_password"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/sign_in_text_box"
        android:inputType="textPassword"
        android:maxLength="5"
        android:paddingLeft="@dimen/dp_5"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="@dimen/dp_25" />

    <View
        android:id="@+id/vw_bottomMargin"
        android:layout_width="@dimen/dp_10"
        android:layout_height="@dimen/dp_25"
        android:layout_below="@+id/et_password" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@+id/vw_bg"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/selector_sign_in_button"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white_text"
        android:textSize="@dimen/dp_25" />

    <ImageButton
        android:id="@+id/ibtn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btn_sign_in"
        android:layout_below="@+id/btn_sign_in"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@android:color/transparent"
        android:src="@drawable/forgot_password"
        android:textAllCaps="false"
        android:textColor="@drawable/selector_white_text" />

    <ImageButton
        android:id="@+id/ibtn_create_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_sign_in"
        android:layout_below="@+id/btn_sign_in"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@android:color/transparent"
        android:src="@drawable/create_new_account_text"
        android:textAllCaps="false"
        android:textColor="@drawable/selector_white_text" />

    <TextView
        android:id="@+id/txt_page_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white_text"
        android:textSize="@dimen/dp_16" />


</RelativeLayout>
